<resources>
    <string name="app_name">MaterialPodcasts</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- FragmentTopBar -->
    <string name="navigate_up">戻る</string>
    <string name="search_hint">ポッドキャストを検索</string>
    <string name="text_delete_all">入力中のテキストを削除</string>

    <!-- SearchFragment -->
    <string name="no_podcast_found">ポッドキャストが見つかりませんでした</string>
    <string name="podcast_loading_error">読み込み中にエラーが発生しました</string>

    <!-- PodcastDetailFragment -->
    <string name="podcast_artwork">アートワーク</string>
    <string name="episode_header">エピソード一覧</string>
    <string name="date_duration_separator">-</string>
    <string name="subscribe">購読</string>
    <string name="download_episode">保存</string>
    <string name="share">共有</string>

    <!-- PlayingView -->
    <string name="time_separator">/</string>
    <string name="position_format">%d:%02d</string>
    <string name="position_placeholder">--:--</string>
    <string name="content_description_rewind">Rewind</string>
    <string name="content_description_fast_forward">Fast forward</string>
    <string name="content_description_play">Play</string>
    <string name="content_description_pause">Pause</string>
    <string name="content_description_collapse">Collapse</string>
    <string name="content_description_artwork">Artwork</string>
</resources>
