<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_medium"
        android:paddingTop="@dimen/margin_small"
        android:paddingEnd="@dimen/margin_medium"
        android:paddingBottom="@dimen/margin_small">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/action_area_subscribe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/action_area_download"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/action_subscribe"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/subscribe"
                android:src="@drawable/ic_rss_feed_black_24dp"
                app:layout_constraintHorizontal_weight="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_extra_small"
                android:text="@string/subscribe"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/action_subscribe"
                app:layout_constraintStart_toStartOf="@id/action_subscribe"
                app:layout_constraintTop_toBottomOf="@id/action_subscribe" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/action_area_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/action_area_share"
            app:layout_constraintStart_toEndOf="@id/action_area_subscribe"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/action_download"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/download_episode"
                android:src="@drawable/ic_file_download_black_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_extra_small"
                android:text="@string/download_episode"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/action_download"
                app:layout_constraintStart_toStartOf="@id/action_download"
                app:layout_constraintTop_toBottomOf="@id/action_download" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/action_area_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/action_area_download"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/action_share"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/share"
                android:src="@drawable/ic_share_black_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_extra_small"
                android:text="@string/share"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/action_share"
                app:layout_constraintStart_toStartOf="@id/action_share"
                app:layout_constraintTop_toBottomOf="@id/action_share" />
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</layout>